--- a/css/style.css
+++ b/css/style.css
@@ -179,9 +179,9 @@ ul.pagination li {
 
 /* Start to customize Reverie */
 a, a:visited, a:hover, a:visited:hover {
+  -webkit-transition: all 100ms linear;
   -moz-transition: all 100ms linear;
   -o-transition: all 100ms linear;
-  -webkit-transition: all 100ms linear;
   transition: all 100ms linear;
 }
 
@@ -190,8 +190,10 @@ figure {
 }
 
 figure img {
-  -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
   border-radius: 5px;
 }
 
@@ -365,8 +367,10 @@ time a:focus {
 }
 
 .page-numbers li span.current {
-  -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
   border-radius: 3px;
 }
 
@@ -387,8 +391,10 @@ time a:focus {
 }
 
 .avatar {
-  -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
   border-radius: 50%;
   float: left;
 }
